--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -46,7 +46,7 @@
         <section class="w-full py-2 flex">
           <div class="w-full text-sm pr-5">
             <%= f.input :keyword, input_html:{class: "edit-form" }, label: "Subtitle"%>
-            <%= f.input :keyword, input_html:{class: "edit-form" }, label: "作者名稱" %>
+            <%= f.input :artist, input_html:{class: "edit-form" }, label: "作者名稱" %>
           </div>
           <div class="w-56 h-64 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-center">
             <div class="w-48 h-48 rounded-lg bg-gray-300">
