--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -168,7 +168,7 @@
             </div>
             <div class="flex justify-between">
               <span class="create-episode-btn py-3 px-5 text-gray-400 hover:text-blue-400" data-random-url="<%= podcast.random_url %>"> ＋ 新增單集</span>
-              <%= link_to '<i class="far fa-caret-square-right"></i>'.html_safe, podcast_episodes_path(podcast.random_url, subdomain: "host"), method: 'post', class: "py-3 px-5 text-gray-400 hover:text-blue-400", target: "_blank" %>
+              <%= link_to '<i class="far fa-caret-square-right"></i>'.html_safe, player_podcast_url(podcast.random_url, subdomain: "player"), class: "py-3 px-5 text-gray-400 hover:text-blue-400", target: "_blank" %>
             </div>
           </div>
         <% end %>
