--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -66,7 +66,7 @@
     </nav>
     <!-- 表單內容 -->
     <div class="my-16 overflow-y-auto">
-      <%= simple_form_for @episode, url: podcasts_path do |f| %>
+      <%= simple_form_for @episode, url: podcast_episodes_path("0") do |f| %>
       <div class="nav-tabs h-20 flex items-end border-b border-gray-100">
         <ul class="inline-flex ml-4" id="createEpisodeFrom">
           <li class="cursor-pointer hover:text-blue-400 font-medium mx-1 pt-3 pb-5 px-2 transition duration-200 text-blue-500 border-b-2 border-blue-400" id="mainEpisode">主要</li>
@@ -123,7 +123,7 @@
           <span class="cursor-pointer border border-blue-500 text-blue-500 mx-2 py-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
             暫存草稿
           </span>
-          <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
+          <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded z-20" %>
         </div>
       </div>
     </nav>
